# pdf-ocr-contract-stamper

./: .gitignore  README.md  build.bat  launcher.py  pdf-ocr-stamper.spec  pyproject.toml  requirements-dev.txt  requirements.txt  rules.yaml  run-preview.bat  run.bat
application/: run-stamper.bat  run-stramper-menu.bat
application/config/: config.yaml
application/output/: placement_log.csv
application/pdf-ocr-contract-stamper-app/: manifest.csv  run-stamper.bat  run-stramper-menu.bat
application/pdf-ocr-contract-stamper-app/output/: error_log.csv  placement_log.csv  unmatched_pdfs.csv
config/: config.yaml
src/pdf_ocr_stamper/: anchors.py  cli.py  config_loader.py  manifest.py  pipeline.py  placement.py  rules_loader.py  signature.py  types.py  utils_naming.py  utils_units.py
